<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>catch2_vendor</name>
  <version>3.4.0</version>
  <description>A modern, C++-native, test framework for unit-tests, TDD and BDD - using C++14, C++17 and later</description>
  <maintainer email="tyler@picknik.ai">Tyler Weaver</maintainer>

  <license>BSD-3-Clause</license>   <!-- The contents of this package are BSD-3-Clause -->
  <license>Boost</license>          <!-- Catch2 is Boost -->

  <url type="website">https://github.com/catchorg/Catch2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
